--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,149 +4,174 @@
     xmlns:miss="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
-    android:gravity="center_horizontal"
+    android:background="#eeeeee"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:gravity="center"
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <com.miss.imissyou.mycar.ui.RoundImageView
-        android:id="@+id/login_userHead_image"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="60dp"
-        android:src="@mipmap/user_head"
-        miss:Radiustype="circle" />
+        <com.miss.imissyou.mycar.ui.RoundImageView
+            android:id="@+id/login_userHead_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@mipmap/user_head"
+            miss:Radiustype="circle" />
+    </LinearLayout>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        android:layout_marginBottom="60dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        app:cardBackgroundColor="@color/login_cardView_background"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="1dp"
-        app:cardMaxElevation="10dp">
+    <LinearLayout
+        android:layout_weight="3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            app:cardBackgroundColor="@color/colorWhite"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="1dp"
+            app:cardMaxElevation="10dp">
 
-        <!--登录页面-->
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:paddingBottom="10dp">
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <View
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:background="@mipmap/user_icon" />
-
-                <EditText
-                    android:id="@+id/login_account_Edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:hint="请输入账号"
-                    android:inputType="text"
-                    android:textColorHint="@color/colorWhite" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <View
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:background="@mipmap/password_icon" />
-
-                <EditText
-                    android:id="@+id/login_password_Edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-
-                    android:hint="请输入密码"
-                    android:inputType="textPassword"
-                    android:textColorHint="@color/colorWhite" />
-            </LinearLayout>
-
+            <!--登录页面-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:paddingTop="0dp"
+                android:paddingBottom="20dp">
 
-                <CheckBox
-                    android:id="@+id/login_savePassword_checkBox"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_weight="1"
-                    android:checked="false"
-                    android:saveEnabled="true"
-                    android:text="记住密码"
-                    android:textColor="@color/color_Light_White"
-                    android:textSize="@dimen/FontSize" />
-
-                <TextView
-                    android:id="@+id/login_findPassword_textView"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="20dp"
-                    android:layout_weight="1"
-                    android:gravity="center|right"
-                    android:text="找回密码>>"
-                    android:textColor="@color/color_Light_White"
-                    android:textSize="@dimen/FontSize" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-                <Button
-                    android:id="@+id/login_doRegister_Btn"
-                    style="@style/MissButton"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_marginTop="15dp"
+                    android:id="@+id/login_account_LinearLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:layout_marginRight="20dp"
-                    android:text="注册"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/FontSize" />
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/login_doLogin_Btn"
-                    style="@style/MissButton"
-                    android:layout_width="wrap_content"
+                    <View
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:background="@mipmap/user_icon" />
+
+                    <EditText
+                        android:id="@+id/login_account_Edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:textSize="16sp"
+                        android:hint="请输入账号"
+                        android:textColor="#000000"
+                        android:inputType="text"
+                        android:gravity="left|bottom"
+                        android:textColorHint="#bbbbbb" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:layout_marginLeft="20dp"
-                    android:text="登录"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/FontSize" />
+                    android:layout_marginTop="15dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <View
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_gravity="center"
+                        android:background="@mipmap/password_icon" />
+
+                    <EditText
+                        android:id="@+id/login_password_Edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:hint="请输入密码"
+                        android:gravity="left|bottom"
+                        android:textColor="#000000"
+                        android:inputType="textPassword"
+                        android:textColorHint="#bbbbbb" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <CheckBox
+                        android:id="@+id/login_savePassword_checkBox"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="20dp"
+                        android:layout_weight="1"
+                        android:checked="false"
+                        android:saveEnabled="true"
+                        android:text="记住密码"
+                        android:textColor="#bcbcbc"
+                        android:textSize="@dimen/FontSize" />
+
+                    <TextView
+                        android:id="@+id/login_findPassword_textView"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="20dp"
+                        android:layout_weight="1"
+                        android:gravity="center|right"
+                        android:text="找回密码>>"
+                        android:textColor="#bbbbbb"
+                        android:textSize="@dimen/FontSize" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/login_doRegister_Btn"
+                        style="@style/MissButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="20dp"
+                        android:text="注册"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/FontSize" />
+
+                    <Button
+                        android:id="@+id/login_doLogin_Btn"
+                        style="@style/MissButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="20dp"
+                        android:text="登录"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/FontSize" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+
 </LinearLayout>
