--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:circleprogress="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/color_carView_mainMesage"
+    android:background="#eeeeee"
     android:orientation="vertical">
 
     <!--标题-->
@@ -14,84 +14,92 @@
         android:layout_height="45dp">
     </com.miss.imissyou.mycar.ui.TitleFragment>
 
-    <com.miss.imissyou.mycar.ui.circleProgress.CircleProgress
-        android:id="@+id/register_progress"
-        android:visibility="gone"
-        circleprogress:color1="@android:color/holo_red_light"
-        circleprogress:color2="@android:color/holo_green_light"
-        circleprogress:color3="@android:color/holo_blue_light"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
-    <!--注册-->
-    <android.support.v7.widget.CardView
-        android:layout_height="0dp"
-        android:layout_marginBottom="120dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="120dp"
-        android:layout_weight="0.51"
-        app:cardElevation="4dp"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/login_cardView_background"
-        android:layout_width="match_parent">
 
     <LinearLayout
+        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.51"
-        android:orientation="vertical"
-        android:padding="15dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
-
-        <EditText
-            android:id="@+id/register_account_Edit"
-            android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <!--注册-->
+        <android.support.v7.widget.CardView
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="25dp"
-            android:hint="请输入账号"
-            android:inputType="text"
-            android:textColorHint="@color/colorWhite" />
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="@color/colorWhite"
+            android:layout_width="match_parent">
 
-        <EditText
-            android:id="@+id/register_passwordone_Edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
-            android:hint="请输入密码"
-            android:inputType="textPassword"
-            android:textColorHint="@color/colorWhite" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:orientation="vertical"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp">
 
-        <EditText
-            android:id="@+id/register_passwordtwo_Edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
-            android:hint="请确认密码"
-            android:inputType="textPassword"
-            android:textColorHint="@color/colorWhite" />
+                <EditText
+                    android:id="@+id/register_account_Edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="25dp"
+                    android:gravity="center"
+                    android:hint="请输入账号"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    android:inputType="text"
+                    android:textColorHint="#bbbbbb" />
 
-        <Button
-            android:id="@+id/register_doSumbit_Btn"
-            style="@style/MissButton"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="提交"
-            android:textColor="@color/color_back"
-            android:textSize="@dimen/FontSize" />
+                <EditText
+                    android:id="@+id/register_passwordone_Edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:hint="请输入密码"
+                    android:inputType="textPassword"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    android:textColorHint="#bbbbbb" />
+
+                <EditText
+                    android:id="@+id/register_passwordtwo_Edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="5dp"
+                    android:hint="请确认密码"
+                    android:inputType="textPassword"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    android:textColorHint="#bbbbbb" />
+
+                <Button
+                    android:id="@+id/register_doSumbit_Btn"
+                    style="@style/MissButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="提交"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
-    </android.support.v7.widget.CardView>
 
 </LinearLayout>
