--- a/app/src/main/res/layout/fragment_music_list.xml
+++ b/app/src/main/res/layout/fragment_music_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,8 +16,6 @@
         android:id="@+id/music_list_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:dividerHeight="10dp"
         android:cacheColorHint="#00000000"
         android:background="#eeeeee"
         android:divider="#eeeeee"
@@ -27,8 +24,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="80dip"
+        android:gravity="center"
         android:clipChildren="false"
+        android:clipToPadding="false"
+        android:verticalScrollbarPosition="defaultPosition"
         android:background="@color/color_carView_mainMesage"
         android:orientation="horizontal">
 
@@ -36,7 +36,7 @@
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="match_parent">
+            android:layout_height="80dp">
 
             <TextView
                 android:id="@+id/play_music_name_tv"
@@ -44,6 +44,8 @@
                 android:textStyle="bold"
                 android:textColor="#ffffff"
                 android:gravity="center|left"
+                android:singleLine="true"
+                android:ellipsize="end"
                 android:paddingLeft="30dp"
                 android:text="HelloWord"
                 android:layout_width="match_parent"
@@ -78,10 +80,15 @@
         <com.miss.imissyou.mycar.ui.CircleButton
             android:id="@+id/btn_pause_music"
             app:cb_color="#ffffff"
-            android:layout_marginBottom="60dp"
-            android:layout_marginRight="20dp"
-            android:layout_width="60dp"
-            android:layout_height="120dp" />
+            app:cb_pressedRingWidth="5dp"
+            android:layout_gravity="bottom"
+            android:layout_marginRight="20dip"
+            android:layout_width="80dp"
+            android:src="@mipmap/music_start"
+            android:background="@mipmap/music_btn_back"
+            android:layout_marginBottom="40dip"
+            android:layout_height="80dip"
+            android:adjustViewBounds="false" />
     </LinearLayout>
 
 </LinearLayout>
