--- a/app/src/main/res/layout/item_music.xml
+++ b/app/src/main/res/layout/item_music.xml
@@ -15,9 +15,6 @@
         android:textColor="@color/color_back"
         android:layout_height="match_parent" />
 
-
-
-
     <!--歌手名和歌名-->
     <LinearLayout
         android:orientation="vertical"
@@ -29,6 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="4"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
@@ -40,6 +39,8 @@
             android:id="@+id/tv_music_auther"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:layout_weight="3"
             android:gravity="center"
             android:layout_marginLeft="10dp"
